deploy/k8s/base/cache-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: that-agent-cache-proxy
spec:
  selector:
    app.kubernetes.io/name: that-agent
    app.kubernetes.io/component: cache-proxy
  ports:
    - name: cache-proxy
      port: 3128
      targetPort: 3128
